--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,7 @@ services:
   dkim:
     image: bloodhunterd/froxlor-mail-dkim
     restart: unless-stopped
+    ports:
+      - '8891:8891'
     volumes:
       - ./keys/:/etc/dkimkeys/:ro
